--- a/package.json
+++ b/package.json
@@ -69,12 +69,18 @@
     "@commitlint/cz-commitlint": "^19.5.0",
     "@eslint/js": "^9.13.0",
     "@faker-js/faker": "^9.3.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.5",
     "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.1",
     "eslint": "^9.15.0",
@@ -88,6 +94,7 @@
     "eslint-plugin-unicorn": "^56.0.1",
     "globals": "^15.11.0",
     "husky": "^9.1.7",
+    "jsdom": "^26.0.0",
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.49",
     "prettier": "^3.4.1",
@@ -97,6 +104,7 @@
     "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vitest": "^3.0.5"
   }
 }
