--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,6 +2,7 @@
     "extends": "./tsconfig.json",
     "include": [
         "src/**/*",
-        "vite.config.ts"
+        "vite.config.ts",
+        "setup-test.ts"
     ]
 }
