--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,6 +21,7 @@
     "noUncheckedSideEffectImports": true
   },
   "include": [
-    "vite.config.ts"
+    "vite.config.ts",
+    "setup-test.ts"
   ]
 }
