docs: update README with in development features and minor package.json changes

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
-    "preview": "vite preview",
+    "format": "prettier --write 'src/**/*.{ts,tsx}'",
     "prepare": "husky",
     "commit": "git-cz"
   },
