feat(dnd): migrate to experimental dnd-kit, simplify logic and fix drop issues
Updated to the experimental version of dnd-kit, simplified drag-and-drop logic, added preview when
moving tasks between columns, and fixed a bug preventing tasks from being dropped into empty
columns.

--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     ]
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
+    "@dnd-kit/abstract": "^0.1.20",
+    "@dnd-kit/helpers": "^0.1.20",
+    "@dnd-kit/react": "^0.1.20",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.14",
